# S.I.P.A

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DECISIONS.md  DESIGN.md  HANDOFF.md  Makefile  PLAN.md  REVIEW.md  VERIFIER.md  VISION.md  pyproject.toml  sandbox.md  siloop.md
design/: cloud-presence.md  code-execution.md  concurrent-chats.md  context-assembly.md  conversation-memory.md  daemon.md  dashboard.md  desktop.md  local-files.md  memory-server.md  obsidian-server.md  research.md  scheduler.md  semantic-index.md  sub-agents.md  web-search.md
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.html  main.js  main.tsx  state.tsx  style.css  telemetry.tsx  threads.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: Chat.tsx  (+6 more)
scripts/: dev.sh  e2e.py
servers/exec/: server.py
servers/fs/: server.py
servers/memory/: server.py  store.py
servers/obsidian/: index.py  server.py  vault.py
servers/scheduler/: server.py  store.py
servers/vault_search/: chunk.py  embed.py  index.py  server.py
servers/web/: backend.py  server.py
src/bot/: __init__.py  cli.py  client.py  config.py  context.py  conversation.py  daemon.py  host.py  loop.py  pool.py  provider.py  query.py  sources.py  subagent.py  verify.py
src/embedding/: __init__.py
src/vaultfs/: __init__.py  vault.py  vault_git.py
tests/: test_context.py  test_conversation.py  test_daemon.py  test_exec.py  test_fs.py  test_host.py  test_index.py  test_loop.py  test_memory.py  test_pool.py  test_provider.py  test_query.py  test_scheduler.py  test_session.py  test_subagent.py  test_vault.py  test_vault_git.py  test_vault_search.py  test_verify.py  test_web.py
(+14 files in other folders)
