[project]
name = "sipa-bot"
version = "0.0.0"
description = "S.I.P.A. — personal AI bot base layer (M0 thin slice)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastembed>=0.8.0",
    "mcp>=1.2",
    "numpy>=2.4.6",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-frontmatter>=1.1",
]

[project.scripts]
sipa = "bot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot", "src/vaultfs", "servers"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "servers", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "servers", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
